--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,13 +4,15 @@
     <string name="app_name">Transport Report</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="news_feed">News Feed</string>
-    <string name="follows">Follows</string>
-    <string name="history">History</string>
+    <string name="news_feed">Tin Mới</string>
+    <string name="follows">Yêu Thích</string>
+    <string name="history">Lịch Sử</string>
     <string name="search">Search</string>
-    <string name="about">About</string>
-    <string name="logout">Logout</string>
-    <string name="login">Login</string>
-    <string name="user_info">User Info</string>
+    <string name="about">Thông Tin</string>
+    <string name="logout">Đăng Xuất</string>
+    <string name="login">Đăng Nhập</string>
+    <string name="user_info">Trang Cá Nhân</string>
+    <string name="news_feed_detail">Tin Chi Tiết</string>
+    <string name="post">Đăng Bài</string>
 
 </resources>
